# raw_image_pipeline

raw_image_pipeline/: CMakeLists.txt  package.xml
raw_image_pipeline/include/raw_image_pipeline/: utils.hpp
raw_image_pipeline/src/raw_image_pipeline/: raw_image_pipeline.cpp
raw_image_pipeline/src/raw_image_pipeline/modules/: color_calibration.cpp  undistortion.cpp
raw_image_pipeline_ros/: CMakeLists.txt  package.xml
raw_image_pipeline_ros/include/raw_image_pipeline_ros/: raw_image_pipeline_ros.hpp
raw_image_pipeline_ros/launch/: raw_image_pipeline_node.launch  raw_image_pipeline_node.launch.py  raw_image_pipeline_node.xml
raw_image_pipeline_ros/src/: raw_image_pipeline_ros.cpp  raw_image_pipeline_ros_node.cpp
raw_image_pipeline_white_balance/: CMakeLists.txt  package.xml
raw_image_pipeline_white_balance/src/: raw_image_pipeline_white_balance_node.cpp
raw_image_pipeline_white_balance/src/raw_image_pipeline_white_balance/: convolutional_color_constancy.cpp
