<?xml version="1.0"?>
<package format="2">
  <name>raw_image_pipeline</name>
  <version>0.0.0</version>
  <description>ROS-independent image proc cuda pipeline</description>

  <author email="matias@robots.ox.ac.uk">Matias Mattamala</author>
  <author email="timonh@leggedrobotics.com">Timon Homberger</author>
  <maintainer email="matias@robots.ox.ac.uk">Matias Mattamala</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>nvidia-cuda</depend>
  <depend>nvidia-cuda-dev</depend>
  <depend>raw_image_pipeline_white_balance</depend>
  <!-- <depend>pybind11_catkin</depend> -->
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
