<?xml version="1.0"?>
<package format="2">
  <name>raw_image_pipeline_white_balance</name>
  <version>0.0.0</version>
  <description>Cpp implementation of CCC/FFCC white balance</description>

  <author email="name@email.com">Shane Yuan</author>
  <author email="matias@robots.ox.ac.uk">Matias Mattamala</author>

  <maintainer email="matias@robots.ox.ac.uk">Matias Mattamala</maintainer>
  <license>GNU</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <!-- ROS2HACK: disable dynamic reconfigure -->
  <!-- <depend>dynamic_reconfigure</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
